@@ -143,7 +143,7 @@ AM_CONDITIONAL([HAVE_LOCKFILE_PROGS],
 # used for EXTRA_DIST in Makefile.am
 AM_CONDITIONAL([CROSS_BUILD], [test "x${ac_scorep_cross_compiling}" = "xyes"])
 
-AC_SCOREP_HAVE_CONFIG_TOOL([otf2],   [5])
+AC_SCOREP_HAVE_CONFIG_TOOL([otf2],   [6])
 AC_SCOREP_HAVE_CONFIG_TOOL([opari2], [2])
 AC_SCOREP_HAVE_CONFIG_TOOL([cube],   [4])
 
