@@ -60,5 +60,6 @@ libscorep_tracing_la_SOURCES = \
     $(SRC_ROOT)src/measurement/tracing/scorep_tracing_definitions.h \
     $(SRC_ROOT)src/measurement/tracing/scorep_tracing_types.h \
     $(SRC_ROOT)src/measurement/tracing/scorep_tracing_collectives.c \
+    $(SRC_ROOT)src/measurement/tracing/scorep_tracing_locking.c \
     $(SRC_ROOT)src/measurement/tracing/scorep_rewind_stack_management.c \
     $(SRC_ROOT)src/measurement/tracing/scorep_rewind_stack_management.h
